# CSV_tool

./: .gitignore  CMakeLists.txt  DESIGN.md  README.md  test.csv
include/csvtool/: aggregation_condition.h  aggregation_engine.h  cli_parser.h  filter_condition.h  filter_engine.h  input_reader.h  output_formatter.h  row_parser.h  utils.h
src/: aggregation_engine.cpp  cli_parser.cpp  filter_engine.cpp  input_reader.cpp  main.cpp  output_formatter.cpp  row_parser.cpp
tests/: integration_tests.sh  test_aggregation_engine.cpp  test_filter_engine.cpp  test_row_parser.cpp
